Fix: overflow on mobile

--- a/assets/sass/base/_wrapper.scss
+++ b/assets/sass/base/_wrapper.scss
@@ -12,10 +12,10 @@
 	display: flex;
 	flex-direction: column;
 	margin-inline: auto;
-	max-width: 100%;
 	gap: var(--gap-m);
 
 	@include tablet-portrait {
+		width: auto;
 		flex-wrap: wrap;
 	}
 }
